Layout fixes for 'notifications' icon vertical alignment and status media horizontal alignment

--- a/app/javascript/flavours/glitch/styles/modern-glitch-fixes.scss
+++ b/app/javascript/flavours/glitch/styles/modern-glitch-fixes.scss
@@ -142,10 +142,6 @@ body.app-body.flavour-glitch
   padding-block: 100px !important;
 }
 
-body.app-body.flavour-glitch > #mastodon .full-width {
-  margin-inline: 0 !important;
-}
-
 body.app-body.flavour-glitch
   > #mastodon
   .media-gallery__item
