--- a/app/javascript/flavours/glitch/styles/urusai-fixes.scss
+++ b/app/javascript/flavours/glitch/styles/urusai-fixes.scss
@@ -7,3 +7,8 @@
   filter: drop-shadow(0 0 3px #0c0c0c);
   z-index: 99;
 }
+
+.icon-badge-wrapper {
+  height: 24px;
+  width: 24px;
+}
